--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,18 @@
             <version>1.18.24</version>
         </dependency>
         <dependency>
+
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.9.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.6.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
